Update tests and bugfix

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/downlink-ipv4-pool-spine1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/downlink-ipv4-pool-spine1.cfg
@@ -43,6 +43,20 @@ interface Ethernet6
    no switchport
    ip address 10.0.1.6/31
 !
+interface Ethernet15
+   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF3_Ethernet3
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address 10.0.3.0/31
+!
+interface Ethernet16
+   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF4_Ethernet3
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address 10.0.3.18/31
+!
 interface Loopback0
    description EVPN_Overlay_Peering
    no shutdown
@@ -87,6 +101,12 @@ router bgp 65000
    neighbor 10.0.1.7 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.0.1.7 remote-as 65039
    neighbor 10.0.1.7 description downlink-ipv4-pool-l3leaf4_Ethernet1
+   neighbor 10.0.3.1 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.0.3.1 remote-as 65029
+   neighbor 10.0.3.1 description downlink-ipv4-pool-l3leaf3_Ethernet3
+   neighbor 10.0.3.19 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.0.3.19 remote-as 65039
+   neighbor 10.0.3.19 description downlink-ipv4-pool-l3leaf4_Ethernet3
    neighbor 192.168.1.10 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.1.10 remote-as 65009
    neighbor 192.168.1.10 description downlink-ipv4-pool-l3leaf1
