--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/downlink-ipv4-pool-l3leaf3.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/downlink-ipv4-pool-l3leaf3.cfg
@@ -27,6 +27,20 @@ interface Ethernet2
    no switchport
    ip address 10.0.4.1/31
 !
+interface Ethernet3
+   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-SPINE1_Ethernet15
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address 10.0.3.1/31
+!
+interface Ethernet4
+   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-SPINE2_Ethernet15
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address 10.0.4.5/31
+!
 interface Loopback0
    description EVPN_Overlay_Peering
    no shutdown
@@ -72,9 +86,15 @@ router bgp 65029
    neighbor 10.0.1.4 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.0.1.4 remote-as 65000
    neighbor 10.0.1.4 description downlink-ipv4-pool-spine1_Ethernet5
+   neighbor 10.0.3.0 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.0.3.0 remote-as 65000
+   neighbor 10.0.3.0 description downlink-ipv4-pool-spine1_Ethernet15
    neighbor 10.0.4.0 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.0.4.0 remote-as 65000
    neighbor 10.0.4.0 description downlink-ipv4-pool-spine2_Ethernet5
+   neighbor 10.0.4.4 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.0.4.4 remote-as 65000
+   neighbor 10.0.4.4 description downlink-ipv4-pool-spine2_Ethernet15
    neighbor 192.168.0.10 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.0.10 remote-as 65000
    neighbor 192.168.0.10 description downlink-ipv4-pool-spine1
