--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/downlink-ipv4-pool-l3leaf4.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/downlink-ipv4-pool-l3leaf4.cfg
@@ -27,6 +27,20 @@ interface Ethernet2
    no switchport
    ip address 10.0.4.3/31
 !
+interface Ethernet3
+   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-SPINE1_Ethernet16
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address 10.0.3.19/31
+!
+interface Ethernet4
+   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-SPINE2_Ethernet16
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address 10.0.4.7/31
+!
 interface Loopback0
    description EVPN_Overlay_Peering
    no shutdown
@@ -72,9 +86,15 @@ router bgp 65039
    neighbor 10.0.1.6 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.0.1.6 remote-as 65000
    neighbor 10.0.1.6 description downlink-ipv4-pool-spine1_Ethernet6
+   neighbor 10.0.3.18 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.0.3.18 remote-as 65000
+   neighbor 10.0.3.18 description downlink-ipv4-pool-spine1_Ethernet16
    neighbor 10.0.4.2 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.0.4.2 remote-as 65000
    neighbor 10.0.4.2 description downlink-ipv4-pool-spine2_Ethernet6
+   neighbor 10.0.4.6 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.0.4.6 remote-as 65000
+   neighbor 10.0.4.6 description downlink-ipv4-pool-spine2_Ethernet16
    neighbor 192.168.0.10 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.0.10 remote-as 65000
    neighbor 192.168.0.10 description downlink-ipv4-pool-spine1
