--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/downlink-ipv4-pool-spine2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/downlink-ipv4-pool-spine2.cfg
@@ -43,6 +43,20 @@ interface Ethernet6
    no switchport
    ip address 10.0.4.2/31
 !
+interface Ethernet15
+   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF3_Ethernet4
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address 10.0.4.4/31
+!
+interface Ethernet16
+   description P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF4_Ethernet4
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address 10.0.4.6/31
+!
 interface Loopback0
    description EVPN_Overlay_Peering
    no shutdown
@@ -87,6 +101,12 @@ router bgp 65000
    neighbor 10.0.4.3 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.0.4.3 remote-as 65039
    neighbor 10.0.4.3 description downlink-ipv4-pool-l3leaf4_Ethernet2
+   neighbor 10.0.4.5 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.0.4.5 remote-as 65029
+   neighbor 10.0.4.5 description downlink-ipv4-pool-l3leaf3_Ethernet4
+   neighbor 10.0.4.7 peer group IPv4-UNDERLAY-PEERS
+   neighbor 10.0.4.7 remote-as 65039
+   neighbor 10.0.4.7 description downlink-ipv4-pool-l3leaf4_Ethernet4
    neighbor 192.168.1.20 peer group EVPN-OVERLAY-PEERS
    neighbor 192.168.1.20 remote-as 65019
    neighbor 192.168.1.20 description downlink-ipv4-pool-l3leaf2
