--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/downlink-ipv4-pool-l3leaf4.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/downlink-ipv4-pool-l3leaf4.yml
@@ -43,6 +43,16 @@ router_bgp:
     remote_as: '65000'
     peer: downlink-ipv4-pool-spine2
     description: downlink-ipv4-pool-spine2_Ethernet6
+  - ip_address: 10.0.3.18
+    peer_group: IPv4-UNDERLAY-PEERS
+    remote_as: '65000'
+    peer: downlink-ipv4-pool-spine1
+    description: downlink-ipv4-pool-spine1_Ethernet16
+  - ip_address: 10.0.4.6
+    peer_group: IPv4-UNDERLAY-PEERS
+    remote_as: '65000'
+    peer: downlink-ipv4-pool-spine2
+    description: downlink-ipv4-pool-spine2_Ethernet16
   - ip_address: 192.168.0.10
     peer_group: EVPN-OVERLAY-PEERS
     peer: downlink-ipv4-pool-spine1
@@ -90,6 +100,24 @@ ethernet_interfaces:
   mtu: 9214
   type: routed
   ip_address: 10.0.4.3/31
+- name: Ethernet3
+  peer: downlink-ipv4-pool-spine1
+  peer_interface: Ethernet16
+  peer_type: spine
+  description: P2P_LINK_TO_DOWNLINK-IPV4-POOL-SPINE1_Ethernet16
+  shutdown: false
+  mtu: 9214
+  type: routed
+  ip_address: 10.0.3.19/31
+- name: Ethernet4
+  peer: downlink-ipv4-pool-spine2
+  peer_interface: Ethernet16
+  peer_type: spine
+  description: P2P_LINK_TO_DOWNLINK-IPV4-POOL-SPINE2_Ethernet16
+  shutdown: false
+  mtu: 9214
+  type: routed
+  ip_address: 10.0.4.7/31
 loopback_interfaces:
 - name: Loopback0
   description: EVPN_Overlay_Peering
