--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/downlink-ipv4-pool-spine1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/downlink-ipv4-pool-spine1.yml
@@ -54,6 +54,16 @@ router_bgp:
     remote_as: '65039'
     peer: downlink-ipv4-pool-l3leaf4
     description: downlink-ipv4-pool-l3leaf4_Ethernet1
+  - ip_address: 10.0.3.1
+    peer_group: IPv4-UNDERLAY-PEERS
+    remote_as: '65029'
+    peer: downlink-ipv4-pool-l3leaf3
+    description: downlink-ipv4-pool-l3leaf3_Ethernet3
+  - ip_address: 10.0.3.19
+    peer_group: IPv4-UNDERLAY-PEERS
+    remote_as: '65039'
+    peer: downlink-ipv4-pool-l3leaf4
+    description: downlink-ipv4-pool-l3leaf4_Ethernet3
   - ip_address: 192.168.1.10
     peer_group: EVPN-OVERLAY-PEERS
     peer: downlink-ipv4-pool-l3leaf1
@@ -126,6 +136,24 @@ ethernet_interfaces:
   mtu: 9214
   type: routed
   ip_address: 10.0.1.6/31
+- name: Ethernet15
+  peer: downlink-ipv4-pool-l3leaf3
+  peer_interface: Ethernet3
+  peer_type: l3leaf
+  description: P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF3_Ethernet3
+  shutdown: false
+  mtu: 9214
+  type: routed
+  ip_address: 10.0.3.0/31
+- name: Ethernet16
+  peer: downlink-ipv4-pool-l3leaf4
+  peer_interface: Ethernet3
+  peer_type: l3leaf
+  description: P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF4_Ethernet3
+  shutdown: false
+  mtu: 9214
+  type: routed
+  ip_address: 10.0.3.18/31
 loopback_interfaces:
 - name: Loopback0
   description: EVPN_Overlay_Peering
