--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/downlink-ipv4-pool-spine2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/downlink-ipv4-pool-spine2.yml
@@ -54,6 +54,16 @@ router_bgp:
     remote_as: '65039'
     peer: downlink-ipv4-pool-l3leaf4
     description: downlink-ipv4-pool-l3leaf4_Ethernet2
+  - ip_address: 10.0.4.5
+    peer_group: IPv4-UNDERLAY-PEERS
+    remote_as: '65029'
+    peer: downlink-ipv4-pool-l3leaf3
+    description: downlink-ipv4-pool-l3leaf3_Ethernet4
+  - ip_address: 10.0.4.7
+    peer_group: IPv4-UNDERLAY-PEERS
+    remote_as: '65039'
+    peer: downlink-ipv4-pool-l3leaf4
+    description: downlink-ipv4-pool-l3leaf4_Ethernet4
   - ip_address: 192.168.1.20
     peer_group: EVPN-OVERLAY-PEERS
     peer: downlink-ipv4-pool-l3leaf2
@@ -126,6 +136,24 @@ ethernet_interfaces:
   mtu: 9214
   type: routed
   ip_address: 10.0.4.2/31
+- name: Ethernet15
+  peer: downlink-ipv4-pool-l3leaf3
+  peer_interface: Ethernet4
+  peer_type: l3leaf
+  description: P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF3_Ethernet4
+  shutdown: false
+  mtu: 9214
+  type: routed
+  ip_address: 10.0.4.4/31
+- name: Ethernet16
+  peer: downlink-ipv4-pool-l3leaf4
+  peer_interface: Ethernet4
+  peer_type: l3leaf
+  description: P2P_LINK_TO_DOWNLINK-IPV4-POOL-L3LEAF4_Ethernet4
+  shutdown: false
+  mtu: 9214
+  type: routed
+  ip_address: 10.0.4.6/31
 loopback_interfaces:
 - name: Loopback0
   description: EVPN_Overlay_Peering
