Refactor: Change the route-maps all over again

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -363,15 +363,15 @@ ip prefix-list PL-STATIC-VRF-DEFAULT
 ip route 172.16.0.0/16 172.16.5.4
 ip route 66.66.66.0/24 172.17.0.0
 !
-route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
-   description Mark prefixes originated from the LAN
-   set extcommunity soo 192.168.42.1:511 additive
-!
-route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
-   description Advertise local routes towards LAN
+route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
+   description Send only prefixes originated from the site.
    match extcommunity ECL-EVPN-SOO
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
+   description Advertise local routes towards LAN
+   match extcommunity ECL-EVPN-SOO
+!
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
    description Advertise routes received from WAN iBGP towards LAN
    match route-type internal
 !
