--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2A.yml
@@ -353,11 +353,11 @@ route_maps:
     - ip address prefix-list PL-WAN-HA-PREFIXES
 - name: RM-BGP-UNDERLAY-PEERS-IN
   sequence_numbers:
-  - sequence: 40
+  - sequence: 30
     type: permit
-    description: Mark prefixes originated from the LAN
-    set:
-    - extcommunity soo 192.168.42.2:423 additive
+    description: Send only prefixes originated from the site.
+    match:
+    - extcommunity ECL-EVPN-SOO
   - sequence: 10
     type: permit
     description: Allow WAN HA peer interface prefixes
@@ -365,31 +365,30 @@ route_maps:
     - ip address prefix-list PL-WAN-HA-PEER-PREFIXES
   - sequence: 20
     type: deny
-    description: Deny prefixes originated from the HA peer
-    match:
-    - extcommunity ECL-EVPN-SOO
-    set:
-    - as-path match all replacement auto auto
-  - sequence: 30
-    type: deny
-    description: Deny WAN routes from HA peer
+    description: Deny other routes from the HA peer
     match:
     - as-path ASPATH-WAN
-    set:
-    - community no-advertise
 - name: RM-BGP-UNDERLAY-PEERS-OUT
   sequence_numbers:
-  - sequence: 10
+  - sequence: 20
     type: permit
     description: Advertise local routes towards LAN
     match:
     - extcommunity ECL-EVPN-SOO
-  - sequence: 20
+  - sequence: 30
     type: permit
     description: Advertise routes received from WAN iBGP towards LAN
     match:
     - route-type internal
-  - sequence: 30
+  - sequence: 10
+    type: permit
+    description: Make tagged routes received from WAN HA peer less preferred for LAN router
+    match:
+    - tag 50
+    - route-type internal
+    set:
+    - metric 50
+  - sequence: 40
     type: permit
     description: Advertise WAN HA prefixes towards LAN
     match:
@@ -412,9 +411,16 @@ route_maps:
   sequence_numbers:
   - sequence: 10
     type: permit
-    description: Set lower Local Preference for EVPN routes received from WAN HA peer
+    description: Make EVPN routes originated from WAN HA peer less preferred and tag them
+    set:
+    - local-preference 75
+    - tag 50
+  - sequence: 20
+    type: permit
+    description: Make EVPN routes received by WAN HA peer less preferred and tag them
     set:
     - local-preference 50
+    - tag 50
 - name: RM-EVPN-EXPORT-VRF-DEFAULT
   sequence_numbers:
   - sequence: 10
