--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -335,15 +335,15 @@ ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.42.2:511
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.42.0/24 eq 32
 !
-route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
-   description Mark prefixes originated from the LAN
-   set extcommunity soo 192.168.42.2:511 additive
-!
-route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
-   description Advertise local routes towards LAN
+route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
+   description Send only prefixes originated from the site.
    match extcommunity ECL-EVPN-SOO
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
+   description Advertise local routes towards LAN
+   match extcommunity ECL-EVPN-SOO
+!
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
    description Advertise routes received from WAN iBGP towards LAN
    match route-type internal
 !
