--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
@@ -413,28 +413,28 @@ route-map RM-BGP-UNDERLAY-PEERS-IN permit 10
    match ip address prefix-list PL-WAN-HA-PEER-PREFIXES
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN deny 20
-   description Deny prefixes originated from the HA peer
-   match extcommunity ECL-EVPN-SOO
-   set as-path match all replacement auto auto
-!
-route-map RM-BGP-UNDERLAY-PEERS-IN deny 30
-   description Deny WAN routes from HA peer
+   description Deny other routes from the HA peer
    match as-path ASPATH-WAN
-   set community no-advertise
 !
-route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
-   description Mark prefixes originated from the LAN
-   set extcommunity soo 192.168.43.1:422 additive
+route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
+   description Send only prefixes originated from the site.
+   match extcommunity ECL-EVPN-SOO
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
+   description Make tagged routes received from WAN HA peer less preferred for LAN router
+   match route-type internal
+   match tag 50
+   set metric 50
+!
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
    description Advertise local routes towards LAN
    match extcommunity ECL-EVPN-SOO
 !
-route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
    description Advertise routes received from WAN iBGP towards LAN
    match route-type internal
 !
-route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 40
    description Advertise WAN HA prefixes towards LAN
    match ip address prefix-list PL-WAN-HA-PREFIXES
 !
@@ -457,8 +457,14 @@ route-map RM-EVPN-SOO-OUT permit 10
    set extcommunity soo 192.168.43.1:422 additive
 !
 route-map RM-WAN-HA-LOCAL-PREF-IN permit 10
-   description Set lower Local Preference for EVPN routes received from WAN HA peer
+   description Make EVPN routes originated from WAN HA peer less preferred and tag them
+   set local-preference 75
+   set tag 50
+!
+route-map RM-WAN-HA-LOCAL-PREF-IN permit 20
+   description Make EVPN routes received by WAN HA peer less preferred and tag them
    set local-preference 50
+   set tag 50
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
