--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
@@ -378,8 +378,8 @@ route-map RM-BGP-UNDERLAY-PEERS-IN deny 20
    match as-path ASPATH-WAN
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
-   description Send only prefixes originated from the site.
-   match extcommunity ECL-EVPN-SOO
+   description Set SOO on prefixes from the site.
+   set extcommunity soo 192.168.42.2:423 additive
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
    description Make tagged routes received from WAN HA peer less preferred for LAN router
@@ -415,7 +415,7 @@ route-map RM-EVPN-SOO-IN deny 10
 route-map RM-EVPN-SOO-IN permit 20
 !
 route-map RM-EVPN-SOO-OUT permit 10
-   set extcommunity soo 192.168.42.2:423 additive
+   match extcommunity ECL-EVPN-SOO
 !
 route-map RM-WAN-HA-LOCAL-PREF-IN permit 10
    description Make EVPN routes originated from WAN HA peer less preferred and tag them
