--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-custom-control-plane-policy-edge-3.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-custom-control-plane-policy-edge-3.cfg
@@ -184,8 +184,8 @@ ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.42.0/24 eq 32
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
-   description Send only prefixes originated from the site.
-   match extcommunity ECL-EVPN-SOO
+   description Set SOO on prefixes from the site.
+   set extcommunity soo 192.168.42.3:511 additive
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
    description Advertise local routes towards LAN
@@ -208,7 +208,7 @@ route-map RM-EVPN-SOO-IN deny 10
 route-map RM-EVPN-SOO-IN permit 20
 !
 route-map RM-EVPN-SOO-OUT permit 10
-   set extcommunity soo 192.168.42.3:511 additive
+   match extcommunity ECL-EVPN-SOO
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
