--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -364,8 +364,8 @@ ip route 172.16.0.0/16 172.16.5.4
 ip route 66.66.66.0/24 172.17.0.0
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
-   description Send only prefixes originated from the site.
-   match extcommunity ECL-EVPN-SOO
+   description Set SOO on prefixes from the site.
+   set extcommunity soo 192.168.42.1:511 additive
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
    description Advertise local routes towards LAN
@@ -388,7 +388,7 @@ route-map RM-EVPN-SOO-IN deny 10
 route-map RM-EVPN-SOO-IN permit 20
 !
 route-map RM-EVPN-SOO-OUT permit 10
-   set extcommunity soo 192.168.42.1:511 additive
+   match extcommunity ECL-EVPN-SOO
 !
 route-map RM-STATIC-2-BGP permit 10
    match ip address prefix-list PL-STATIC-VRF-DEFAULT
