--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge3A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge3A.yml
@@ -204,9 +204,9 @@ route_maps:
   sequence_numbers:
   - sequence: 30
     type: permit
-    description: Send only prefixes originated from the site.
-    match:
-    - extcommunity ECL-EVPN-SOO
+    description: Set SOO on prefixes from the site.
+    set:
+    - extcommunity soo 192.168.42.6:404 additive
   - sequence: 10
     type: permit
     description: Allow WAN HA peer interface prefixes
@@ -254,8 +254,8 @@ route_maps:
   sequence_numbers:
   - sequence: 10
     type: permit
-    set:
-    - extcommunity soo 192.168.42.6:404 additive
+    match:
+    - extcommunity ECL-EVPN-SOO
 - name: RM-WAN-HA-LOCAL-PREF-IN
   sequence_numbers:
   - sequence: 10
