--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
@@ -948,6 +948,24 @@ $defs:
               This setting is only applied on the devices where it is set, it does not automatically affect any parent/child devices configuration, so it must be set on each applicable node/node-group/node-type as needed.
             type: int
             default: 1500
+          inband_ztp:
+            documentation_options:
+              table: node-type-inband-management-configuration
+            description: |-
+              Enable to configure upstream device with proper configuration to allow downstream devices to ZTP inband.
+              This setting also requires that the `inband_mgmt_vlan` is set for the node.
+            type: bool
+            default: false
+          inband_ztp_lacp_fallback_delay:
+            documentation_options:
+              table: node-type-inband-management-configuration
+            description: |-
+              Set the LACP fallback timeout of the upstream device's port-channel towards the downstream inband ZTP node.
+              This setting also requires that `inband_ztp` is set for the node.
+            type: int
+            min: 0
+            max: 300
+            default: 30
           inband_management_subnet:
             documentation_options:
               table: node-type-inband-management-configuration
