--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/wan_path_groups.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/wan_path_groups.schema.yml
@@ -7,9 +7,9 @@
 type: dict
 keys:
   wan_path_groups:
-    description: |-
-      PREVIEW: This key is currently not supported
-      List of path-groups used for the WAN configuration.
+    documentation_options:
+      table: wan-path-groups-and-carriers
+    description: List of path-groups used for the WAN configuration.
     type: list
     primary_key: name
     items:
