--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/bgp_peer_groups.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/bgp_peer_groups.schema.yml
@@ -149,10 +149,6 @@ keys:
             $ref: "eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items/"
       wan_overlay_peers:
         type: dict
-        documentation_options:
-          table: wan-bgp-peer-groups
-        description: |-
-          PREVIEW: This key is currently not supported
         keys:
           name:
             type: str
@@ -202,12 +198,7 @@ keys:
             default: 1
       wan_rr_overlay_peers:
         type: dict
-        documentation_options:
-          table: wan-bgp-peer-groups
-        description: |-
-          PREVIEW: This key is currently not supported
-          Configuration options for the peer-group created to peer between
-          AutoVPN RRs or CV-Pathfinders.
+        description: Configuration options for the peer-group created to peer between AutoVPN RRs or CV Pathfinders.
         keys:
           name:
             type: str
