--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -1531,6 +1531,7 @@ keys:
             keys:
               eap_response:
                 type: str
+                description: EAP response to send.
                 valid_values:
                 - success
                 - disabled
@@ -1549,6 +1550,15 @@ keys:
                         convert_types:
                         - str
                         min: 1
+                        description: 'Enable caching for a specific duration -
+
+                          <1-10000>      duration in days
+
+                          <1-14400000>   duration in minutes
+
+                          <1-240000>     duration in hours
+
+                          <1-864000000>  duration in seconds'
                       time_duration_unit:
                         type: str
                         required: true
@@ -1583,6 +1593,15 @@ keys:
                         convert_types:
                         - str
                         min: 1
+                        description: 'Enable caching for a specific duration -
+
+                          <1-10000>      duration in days
+
+                          <1-14400000>   duration in minutes
+
+                          <1-240000>     duration in hours
+
+                          <1-864000000>  duration in seconds'
                       time_duration_unit:
                         type: str
                         required: true
