--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/event_handlers.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/event_handlers.schema.yml
@@ -57,12 +57,9 @@ keys:
               description: Trigger condition occurs on maintenance operation of specified BGP peer.
               type: dict
               keys:
-                neighbor_address_ipv4:
+                peer:
                   type: str
-                neighbor_address_ipv6:
-                  type: str
-                peer_group_name:
-                  type: str
+                  description: Ipv4/Ipv6 address or peer group name.
             action:
               type: str
               required: true
