--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-service-insertion.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-service-insertion.cfg
@@ -6,16 +6,19 @@ hostname router-service-insertion
 !
 router service-insertion
    connection connection1
-      interface ethernet2 next-hop 10.10.10.10
+      interface Ethernet2/2.2 next-hop 10.10.10.10
       monitor connectivity host host1
    connection connection2
-      interface tunnel2 primary
-      interface tunnel3 secondary
+      interface Tunnel2 primary
+      interface Tunnel3 secondary
       monitor connectivity host host2
    connection connection3
-      interface tunnel4 primary
-      interface tunnel5 secondary
+      interface Tunnel4 primary
+      interface Tunnel5 secondary
       monitor connectivity host host3
+   connection connection4
+      interface Ethernet3/1.1 next-hop 10.10.10.10
+      monitor connectivity host host4
 !
 no enable password
 no aaa root
