--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -1355,6 +1355,10 @@ keys:
     primary_key: name
     description: 'IPv4 Extended Access-lists supporting substitution on certain fields.
 
+      These Access-lists can be referenced under node settings `l3_interfaces`, and
+      will only be configured on devices where they are in use.
+
+
       The substitution is useful when assigning the same access-list on multiple interfaces,
 
       but where certain fields require unique values like the "interface_ip" or "peer_ip".
@@ -8144,7 +8148,9 @@ $defs:
           description: 'Name of the IPv4 Access-list to be assigned in the ingress
             direction.
 
-            The access-list must be defined under `ipv4_acls`.'
+            The access-list must be defined under `ipv4_acls`.
+
+            Required for WAN interfaces (`wan_carrier` is set).'
           type: str
           convert_types:
           - int
@@ -8175,7 +8181,10 @@ $defs:
           description: 'The WAN Carrier this interface is connected to.
 
             This is used to infer the path-groups in which this interface should be
-            configured.'
+            configured.
+
+            When setting this, `ipv4_acl_in` is also required, to ensure a secure
+            configuration.'
         wan_circuit_id:
           type: str
           convert_types:
@@ -8186,7 +8195,7 @@ $defs:
         connected_to_pathfinder:
           type: bool
           default: true
-          description: For a WAN interface (`wan_path_group` is set), allow to disable
+          description: For a WAN interface (`wan_carrier` is set), allow to disable
             the static tunnel towards Pathfinders.
         raw_eos_cli:
           type: str
