--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type_l3_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type_l3_interfaces.schema.yml
@@ -81,6 +81,7 @@ $defs:
           description: |-
             Name of the IPv4 Access-list to be assigned in the ingress direction.
             The access-list must be defined under `ipv4_acls`.
+            Required for WAN interfaces (`wan_carrier` is set).
           type: str
           convert_types:
             - int
@@ -110,6 +111,7 @@ $defs:
           description: |-
             The WAN Carrier this interface is connected to.
             This is used to infer the path-groups in which this interface should be configured.
+            When setting this, `ipv4_acl_in` is also required, to ensure a secure configuration.
         wan_circuit_id:
           type: str
           convert_types:
@@ -121,7 +123,7 @@ $defs:
           type: bool
           default: true
           description: |-
-            For a WAN interface (`wan_path_group` is set), allow to disable the static tunnel towards Pathfinders.
+            For a WAN interface (`wan_carrier` is set), allow to disable the static tunnel towards Pathfinders.
         raw_eos_cli:
           type: str
           description: EOS CLI rendered directly on the interface in the final EOS configuration.
