--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/ipv4_acls.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/ipv4_acls.schema.yml
@@ -11,6 +11,8 @@ keys:
     primary_key: name
     description: |-
       IPv4 Extended Access-lists supporting substitution on certain fields.
+      These Access-lists can be referenced under node settings `l3_interfaces`, and will only be configured on devices where they are in use.
+
       The substitution is useful when assigning the same access-list on multiple interfaces,
       but where certain fields require unique values like the "interface_ip" or "peer_ip".
       When using substitution, the interface name will be appended to the ACL name.
